translates in register

--- a/public/locales/ka.json
+++ b/public/locales/ka.json
@@ -12,7 +12,7 @@
     }
   },
   "register": {
-    "username": "ზედმეტ-სახელი",
+    "username": "მომხმარებელი",
     "day": "დღე",
     "month": "თვე",
     "year": "წელი",
