--- a/public/locales/ka.json
+++ b/public/locales/ka.json
@@ -1,7 +1,7 @@
 {
   "login": {
     "login": "შესვლა",
-    "email": "ელ.ფოსტა",
+    "email": "ელ - ფოსტა",
     "password": "პაროლი",
     "noAccount": "არ გაქვთ ანგარიში?",
     "register": "რეგისტრაცია",
@@ -16,11 +16,12 @@
     "day": "დღე",
     "month": "თვე",
     "year": "წელი",
-    "email": "იმეილი",
+    "email": "ელ-ფოსტა",
     "password": "პაროლი",
     "Rpassword": "გაიმეორეთ პაროლი",
-    "question": "ვინ ხართ თქვენ",
+    "question": "აირჩიეთ თქვენი როლი",
     "entrepreneur": "მეწარმე",
+    "or": "ან",
     "investor": "ინვესტორი",
     "button": "რეგისტრაცია"
   }
