--- a/public/locales/ka.json
+++ b/public/locales/ka.json
@@ -23,6 +23,10 @@
     "entrepreneur": "მეწარმე",
     "or": "ან",
     "investor": "ინვესტორი",
-    "button": "რეგისტრაცია"
+    "button": "რეგისტრაცია",
+    "confirm": {
+      "confirm": "შეიყვანეთ იმეილზე მოსული კოდი",
+      "button": "დადასტურება"
+    }
   }
 }
